# ghprofile

./: LICENSE  README.md  pyproject.toml
ghprofile/: __init__.py  core.py
tests/: test_core.py
