[project]
name = "ghprofile"
version = "0.1.0"
description = "A lightweight library to fetch and summarize GitHub user data"
authors = [
    { name = "Ujjwal Baunthiyal", email = "baunthiyalujjwal52@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "beautifulsoup4"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/ujjwaluzu/ghprofile"
Source = "https://github.com/ujjwaluzu/ghprofile"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
